# manage-rs

agent/: Cargo.toml  README.md
agent-shared/: Cargo.toml
agent-shared/src/: lib.rs
agent/src/: main.rs  models.rs  systemd_manager.rs
clients/desktop/: README.md
server/: Cargo.toml  README.md
server/src/: main.rs  prelude.rs
server/src/api/: mod.rs
server/src/api/components/: mod.rs
server/src/api/components/agents/: mod.rs
server/src/api/components/servers/: mod.rs  models.rs
server/src/libs/: agent_service.rs  api_response.rs  app_config.rs  db_driver.rs  mod.rs  rmp_serializer.rs  shared_state.rs  ssh_session.rs
server/src/middlewares/: auth_mw.rs
server/src/models/: mod.rs  server.rs  server_metric.rs
server/src/sub_server_io/: mod.rs
