[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
machine-info = "1.0.9"
#dirs = "6.0.0"
systemctl = "0.4.0"
eyre = "0.6.12"
serde = "1.0.217"
serde_json = "1.0.138"
message-io = { version = "0.18.3", features = ["tcp"], default-features = false }
bincode = "1.3.3"
agent-shared = { path = "../agent-shared" }

[profile.release]
opt-level = "s"