[package]
name = "managers_server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[dependencies]
# Async and concurrency
futures = "0.3.31"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs"] }

# Http
axum = { version = "0.8.1", features = ["macros"] }
axum-helmet = "0.1.0"
tower = { version = "0.5.2", features = ["buffer"] }
tower-http = { version = "0.6.2", features = ["cors", "timeout", "limit", "catch-panic", "compression-gzip"] }
reqwest = "0.12.12"

# Configuration and environment
dotenv = "0.15.0"

# Error handling and logging
eyre = "0.6.12"
fern = "0.7.0"
log = "0.4.22"

chrono = { version = "0.4.39", features = ["serde", "rkyv-64", "rkyv-validation"] }


# Data serialization and parsing
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

itertools = "0.14.0"

# Unique identifiers and hashing
cuid2 = "0.1.3"

clap = { version = "4.5.29", features = ["derive"] }
dirs = "6.0.0"

#DB
native_db = { git = "https://github.com/vincent-herlemont/native_db" }
native_model = { version = "0.6.1" }
rmp-serde = "1.3.0"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }

hex = "0.4.3"

systemctl = "0.4.0"
russh = "0.50.2"
russh-sftp = "2.0.8"